--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ p {
     background-image: url('../img/banner.jpg');
     background-size: cover;
     background-position: center;
-    height: 70vh;
+    height: 100vh;
     text-align: center;
     color: var(--blanco);
 }
@@ -73,17 +73,26 @@ p {
 /* efecto hover en los enlaces de navegacion */
 .header__nav a:hover {
     text-decoration: underline;
-    font-size: 2rem;
 }
+
 .header__texto {
-    height: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-/* blog container */
 
+/* main */
+.container {
+    justify-self: center;
+    max-width: 130rem;
+    gap: 5rem;
+}
+
+/* blog container */
 .blogContainer, .curseContainer{
     margin: 4rem;
 }
@@ -138,7 +147,7 @@ p {
 }
 
 @media (min-width: 768px) {
-    main {
+    .container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
